fix for text selection on the tn-invite on iOS

--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
     padding: 0;
     font-family: variables.$font-family-primary;
     font-size: variables.$body-size;
+    -webkit-tap-highlight-color: transparent;
     scroll-behavior: smooth;
 }
 
